gateway server update